objects/Regulatory_Activity__c.object
<CustomObject>
    <label>Regulatory Activity</label>
    <pluralLabel>Regulatory Activities</pluralLabel>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <fields>
        <fullName>Activity_Name__c</fullName>
        <label>Activity Name</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <type>Lookup</type>
        <referenceTo>User</referenceTo>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>LongTextArea</type>
        <length>32000</length>
    </fields>
    <fields>
        <fullName>Document_Attachment__c</fullName>
        <label>Document Attachment</label>
        <type>File</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>